--- a/style.css
+++ b/style.css
@@ -1,40 +1,98 @@
+/*
+	99Lime.com HTML KickStart by Joshua Gatcke
+	style.css
+	
+*/
+
+/*---------------------------------
+	IMPORTS
+-----------------------------------*/
+@import url(http://fonts.googleapis.com/css?family=Arimo:400,700);
+
+/*---------------------------------
+	OVERRIDES
+-----------------------------------*/
+h1,h2,h3,h4,h5,h6{
+font-family: "Trebuchet Ms", arial, verdana, sans-serif;
+}
+
+thead th,
+tbody th{
+font-family: "Trebuchet Ms", arial, verdana, sans-serif;
+}
+
+button,
+a.btn,
+input[type="submit"],
+input[type="reset"],
+input[type="button"]{
+font-family: "Trebuchet Ms", arial, verdana, sans-serif;
+}
+
+.menu{
+font-family: "Trebuchet Ms", arial, verdana, sans-serif;
+}
+
+blockquote{
+font-family: "Trebuchet Ms", arial, verdana, sans-serif;
+}
+
+/*---------------------------------
+	LAYOUT
+-----------------------------------*/
 body{
-	text-align: center;
-
-}
-#content{
-	width: 450px;
-	margin: 0 auto;	
-}
-#results table{
-	text-align: center;
-	margin: 0 auto;	
-	width: 400px;
-}
-#addDailyChoice{
-	text-align: center;
+margin:0;
+padding:0;
+color:#000;
+background:#efefef url(css/img/grid.png) repeat center top;
+font:normal 0.9em/150% 'Arimo', "Trebuchet MS", arial, verdana, sans-serif;
+text-shadow: 0px 0px 1px transparent; /* google font pixelation fix */
 }
 
-/* For modern browsers */
-.cf:before,
-.cf:after {
-    content:"";
-    display:table;
+#wrap{
+width:960px;/*960*/
+background:#fff;
+margin:30px auto 30px auto;
+padding:0;
+border:1px solid #ccc;
 }
 
-.cf:after {
-    clear:both;
+.menu{
+margin:-1px -1px 0 -1px;
 }
 
-/* For IE 6/7 (trigger hasLayout) */
-.cf {
-    zoom:1;
+
+#footer{
+text-align:center;
+padding:20px;
+margin:0;
+background:#efefef;
+border-top:1px solid #ccc;
+color:#999;
+font-size:0.8em;
+text-shadow:0px 1px 1px #fff;
+position: relative;
+top:0;
+left:0;
 }
 
-.error{
-	font-weight: bold;
-	color: red;
-}
+	#link-top{
+	position: absolute;
+	top:10px;
+	right:10px;
+	*right:25px;/*IE 7 ONLY*/
+	left:auto;
+	color:#666;
+	text-decoration:none;
+	display: inline-block;
+	padding:5px 10px;
+	background:#e5e5e5;
+	line-height:100%;
+	-moz-border-radius:3px;
+	-webkit-border-radius:3px;
+	border-radius:3px;
+	}
+
 .banner{
 	width: 200px;
 }
